tests/baselines/reference/parserComputedPropertyName15.errors.txt
parserComputedPropertyName15.ts(1,32): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName15.ts (1 errors) ====
    var v: { [e: number]: string; [e]: number };
                                   ~
!!! error TS2304: Cannot find name 'e'.